5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1795_1601.log
== TEST (2019-05-30 16:03:13) 
-- CODE:
from numpy import*
x=array(eval(input('')))

y=(arange(x), dtype=int)

print(max(y))
-- ERROR:
File "XXXX", line 4
    y=(arange(x), dtype=int)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:03:22) 
-- CODE:
from numpy import*

x=array(eval(input('')))

y=arange(x), 

print(max(y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:03:43) 
-- CODE:
from numpy import*

x=array(eval(input('')))

y=arange(x)

print(max(y))
-- EXECUTION TIME:
0.442933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 5, in <module>
    y=arange(x)
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:03:44) 
-- CODE:
from numpy import*

x=array(eval(input('')))

y=arange(x)

print(max(y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:04:01) 
-- CODE:
from numpy import*

x=array(eval(input('')))

y = zeros(x)

print(max(y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:04:43) 
-- CODE:
from numpy import*

x=array(eval(input('')))


print(max(x))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:05:23) 
-- CODE:
from numpy import*

x=array(eval(input('')))

a=arange(x)

print(max(x))

-- EXECUTION TIME:
0.348828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 5, in <module>
    a=arange(x)
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:24) 
-- CODE:
from numpy import*

x=array(eval(input('')))

a=arange(x)

print(max(x))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:44) 
-- CODE:
from numpy import*

x=array(eval(input('')))

a=arange(x),dtype=int

print(max(x))

-- ERROR:
File "XXXX", line 5
    a=arange(x),dtype=int
     ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:45) 
-- CODE:
from numpy import*

x=array(eval(input('')))

a=arange(x),dtype=int

print(max(x))

-- ERROR:
File "XXXX", line 5
    a=arange(x),dtype=int
     ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:50) 
-- CODE:
from numpy import*

x=array(eval(input('')))

a=(arange(x),dtype=int)

print(max(x))

-- ERROR:
File "XXXX", line 5
    a=(arange(x),dtype=int)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:06:09) 
-- CODE:
from numpy import*

x=array(eval(input('')))

a=(zeros(x) , dtype = int)

print(max(x))

-- ERROR:
File "XXXX", line 5
    a=(zeros(x) , dtype = int)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:48) 
-- CODE:
from numpy import*

x=array(eval(input("")))

i=0

while(i<size(x)):
	if(x[i]!=size(x)):
		print(max(x))
	i+=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:08:03) 
-- CODE:
from numpy import*

x=array(eval(input("")))

i=0

while(i<size(x)):
	if(x[i]!=size(x)):
		print(max(x))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:08:45) 
-- CODE:
from numpy import*

x=array(eval(input("")))

i=0

while(i<size(x)):
	if(x[i]!=size(x)):
		print(max(arange(x))
	

-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:08:58) 
-- CODE:
from numpy import*

x=array(eval(input("")))

i=0

while(i<size(x)):
	if(x[i]!=size(x)):
		print(max(zeros(x)))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:10:00) 
-- CODE:
from numpy import*

x=array(eval(input("")))

y=aranges(x)

print(y)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:10:14) 
-- CODE:
from numpy import*

x=array(eval(input("")))

y=arange(x)

print(y)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:23:54) 
-- CODE:
from numpy import*

x=array(eval(input("")))

A=arange(x)

print(A)






-- EXECUTION TIME:
0.505293
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 5, in <module>
    A=arange(x)
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:55) 
-- CODE:
from numpy import*

x=array(eval(input("")))

A=arange(x)

print(A)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:59) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(i<f):
	i+=1
	
print(1)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:36) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(i<f):
	i+=1
	
print(1)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:56) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(f<x):
	i+=1
	
print(1)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:08) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(f[i]<x):
	i+=1
	
print(1)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:37) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(f[i]<size(x)):
	i+=1
	
print(1)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:45) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(f<size(x)):
	i+=1
	
print(1)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:30:51) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(f<size(x)):
	i+=1
	
print(1)








-- EXECUTION TIME:
0.433339
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:01) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(f>size(x)):
	i+=1
	
print(1)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:36) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(f<size(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:44) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(i<size(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:58) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(i-1<size(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:06) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(i+1<size(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:32:12) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(i+1<size(x)):
	i+=1
	
print(i)








-- EXECUTION TIME:
0.438687
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
3
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
2
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:21) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=1
while(i<size(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:34) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=1
while(f<size(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:44) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(f<size(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:09) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(i<size(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:13) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(i<size(x)):
	i+=1
	
print(i)








-- EXECUTION TIME:
0.343378
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
4
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
4
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:16) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(i<size(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:33) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(i+1<size(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:39) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(i+1<size(x)):
	i+=1
	
print(i)








-- EXECUTION TIME:
0.479919
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
3
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
2
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:53) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=max(x)
i=0
while(i<max(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:20) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
while(i<f):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:31) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
while(i<f[i]):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:49) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
while(i<size(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:58) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
while(i<size(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:06) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
while(i+1<size(x)):
	i+=1
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:48) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
o=1
while(i+1<size(x)):
	i+=1+o
	o+=1
	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:17) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
o=1
while(i<size(x)):
	i+=1+o
	o+=1
	
	
print(i)








-- EXECUTION TIME:
0.40573
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
5
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
5
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:17) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
o=1
while(i<size(x)):
	i+=1+o
	o+=1
	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:22) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
o=1
while(i<size(x)):
	i+=1+o
	o+=1
		
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:28) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
o=1
while(i<size(x)):
	i+=1+o
	o+=1
		
print(o)








-- EXECUTION TIME:
0.499004
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
3
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
3
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:34) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
o=1
while(i<size(x)):
	i+=1
	o+=1
		
print(o)








-- EXECUTION TIME:
0.662544
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
5
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
5
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:35) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
o=1
while(i<size(x)):
	i+=1
	o+=1
		
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:55) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
o=1
while(i<size(x)):
	i+=1
	o+=1+i
		
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:04) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))
i=0
o=1
while(i<size(x)):
	o+=1
		
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:20) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))

o=1
while(o<size(x)):
	o+=1
		
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:35) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))

o=1
while(o<size(x)):
	o+=1
		
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:39) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))

o=1
while(o<size(x)):
	o+=1
		
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:45) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))

o=1
while(o<size(x)):
	o+=1
		
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:06) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))

o=1
while(o<size(x)):
	o+=1
		
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:14) 
-- CODE:
from numpy import*

x=array(eval(input("")))

f=arange(max(x))

o=1
while(o<max(x)):
	o+=1
		
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:51) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
while(o<size(x)):
	if(x[o]<max(x))
		a+=1
	else:
		o+=1
		
print(o)








-- ERROR:
File "XXXX", line 7
    if(x[o]<max(x))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:57) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
while(o<size(x)):
	if(x[o]<max(x)):
		a+=1
	else:
		o+=1
		
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:57) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		o+=1
	i+=1	
		
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:11) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		o+=1
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:23) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		o+=1
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:31) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		o+=1+2
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:04) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		o+=1+2
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:33) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		p=2
		o+=1+
		o=o+p
	i+=1	
	
print(o)








-- ERROR:
File "XXXX", line 12
    o+=1+
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:37) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		p=2
		o+=1
		o=o+p
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:46) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		
		o+=1
		
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:56) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		
		o+=1
		
	i+=1	
	
print(o+2)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:08) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		
		o+=1
		
	i+=1	
	
print(o+2)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:17) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		
		o+=1
		
	i+=1	
	
print(o+2)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:43:21) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		
		o+=1
		
	i+=1	
	
print(o+2)








-- EXECUTION TIME:
0.38068
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
5
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
5
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:43:25) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		
		o+=1
		
	i+=1	
	
print(o)








-- EXECUTION TIME:
0.402748
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
3
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
3
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:37) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		o+=1
		
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:59) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		o+=1
		
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:09) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<max(x)):
		a+=1
	else:
		o+=1
		
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:43) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<min(x)):
		a+=1
	else:
		o+=1
		
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:55) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<min(x)):
		a+=1
	else:
		o+=1
		
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:02) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<min(x)):
		a+=1
	else:
		o+=1
		
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:05) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<min(x)):
		a+=1
	else:
		o+=1
		
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:06) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<min(x)):
		a+=1
	else:
		o+=1
		
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:41) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<min(x)):
		a+=1
	else:
		o+=1
		
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:46) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<min(x)):
		a+=1
	else:
		o+=1
		
	i+=1	
	
print(a)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:51) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<min(x)):
		a+=1
	else:
		o+=1
		
	i+=1	
	
print(a)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:58) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<min(x)):
		a+=1
	else:
		o+=1
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:08) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(x[a]<min(x)):
		a+=1
	else:
		o+=1
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:21) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=1
while(i<size(x)):
	if(x[a]<min(x)):
		a+=1
	else:
		o+=1
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:29) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=1
while(i<size(x)):
	if(x[a]<min(x)):
		a+=1
	else:
		o+=1
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:41) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=1
while(i<size(x)):
	if(x[a]<min(x)):
		a+=1
	else:
		o+=1
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:02) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=1
while(i<size(x)):
	if(a<min(x)):
		a+=1
	
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:39) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=1
while(i<min(x)):
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:04) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<min(x)):
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:24) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(a!=min(x)):
		o+=1
	else:
		a+=1
	
	i+=1	
	
print(a)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:38) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(a!=min(x)):
		o+=1
	else:
		a+=1
	
	i+=1	
	
print(a)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:53) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(a<min(x)):
		o+=1
	else:
		a+=1
	i+=1	
	
print(a)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:04) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(a<min(x)):
		o+=1
	else:
		a+=1
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:15) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(a<min(x)):
		o+=1
	else:
		a+=1
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:58) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(min(x)<size(x)):
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:28) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(a<min(x)):
		o+=1
	else:
		a+=1
	i+=1	
	
print(o)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:33) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(a<min(x)):
		o+=1
	else:
		a+=1
	i+=1	
	
print(a)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:44) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(a<min(x)):
		o+=1
	else:
		a+=1
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:52) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(a<min(x)):
		o+=1
	else:
		a+=1
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:59) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(a<min(x)):
		o+=1
	else:
		a+=1
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:04) 
-- CODE:
from numpy import*

x=array(eval(input("")))
o=0
a=0
i=0
while(i<size(x)):
	if(a<min(x)):
		o+=1
	else:
		a+=1
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:11) 
-- CODE:
from numpy import*

x=array(eval(input("")))
0
a=0
i=0
while(i<size(x)):
	if(a<min(x)):
		o+=1
	else:
		a+=1
	i+=1	
	
print(i)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:54:14) 
-- CODE:
from numpy import*

x=array(eval(input("")))
0
a=0
i=0
while(i<size(x)):
	if(a<min(x)):
		o+=1
	else:
		a+=1
	i+=1	
	
print(i)








-- EXECUTION TIME:
0.414231
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 9, in <module>
    o+=1
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:54:15) 
-- CODE:
from numpy import*

x=array(eval(input("")))
0
a=0
i=0
while(i<size(x)):
	if(a<min(x)):
		o+=1
	else:
		a+=1
	i+=1	
	
print(i)








-- EXECUTION TIME:
0.371408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 9, in <module>
    o+=1
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:54:58) 
-- CODE:
from numpy import*

x=array(eval(input("")))

i+=0
while(i<size(x)):
	i+=1
	
print(i)









-- EXECUTION TIME:
0.41386
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 5, in <module>
    i+=0
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:59) 
-- CODE:
from numpy import*

x=array(eval(input("")))

i+=0
while(i<size(x)):
	i+=1
	
print(i)









-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:42:06) 
-- CODE:
from numpy import*

x=array(eval(input("")))

i+=0
while(i<size(x)):
	i+=1
	
print(i)









-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:42:34) 
-- CODE:
from numpy import*

x=array(eval(input("")))

i+=0
while(i<size(x)):
	i+=1
	
print(i)









-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-07 18:28:38) 
-- CODE:
from numpy import*

x=array(eval(input("")))

i+=0
while(i<size(x)):
	i+=1
	
print(i)









-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
